--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Check
-        if : "contains(github.event.head_commit.message, '[gitTest]')"
+        #if : "contains(github.event.head_commit.message, '[gitTest]')"
         run : |
           echo "[LOG] It contains [gitTest], will update to other repo"
           git fetch
