--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
-          taken: ${{ secrets.DATALAB_SECRET_TOKEN }}
+          token: ${{ secrets.DATALAB_SECRET_TOKEN }}
       - name: Check
         if : "contains(github.event.head_commit.message, '[gitTest, merge]')"
         run : |
