--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -19,7 +19,7 @@ jobs:
         if : "contains(github.event.head_commit.message, '[gitTest, merge]')"
         run : |
           echo "[LOG] It contains [gitTest], will update to other repo"
-          cd ../../../gitTest/
+          cd ../../../../gitTest/
           git fetch
           echo "[LOG] Git fetch"
           git pull origin master
