--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-1            an interesting project to engage oneself into
+1. an interesting project to engage oneself into
 many new things can be learned from this project
 
 
-add docker to check
+2. add docker to check
 
