--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,9 @@ many new things can be learned from this project
 
 2. add docker to check
 
+a. an interesting project to engage oneself into
+many new things can be learned from this project
+
+
+b. add docker to check
+
