--- a/requirements.txt
+++ b/requirements.txt
@@ -14,5 +14,11 @@ c. an interesting project to engage oneself into
 many new things can be learned from this project
 
 
-c. add docker to check
+d. add docker to check
+
+e. an interesting project to engage oneself into
+many new things can be learned from this project
+
+
+f. add docker to check
 
